[package]
name = "tenso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2"] }
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
actix-web = "4"
anyhow = "1"